# halocline

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  finalschema.md  patterns.md  requirements.txt
.claude/plans/: python-rewrite.md
halocline-app/: README.md  package.json
halocline-app/src/: styles.css
halocline-physics/tests/: test_parity_with_ts.py
halocline-stage1/: README.md  package.json
halocline-stage1/app/: checkpointServer.ts  marketingPage.ts  mockStage1ViewModel.ts
halocline-surrogate/: README.md  RUN_H100.md
product/: BRANDING.md
reference_snapshots/: README.md  grid_geometry.json
research/halocline-physics/: README.md  pyproject.toml
research/halocline-physics/src/halocline_physics/: __init__.py  grid.py  scenario_runner.py  types.py  upconing.py
research/halocline-physics/src/halocline_physics/datasets/: biscayne_stage1.py
research/halocline-physics/tests/: test_darcy_analytical.py  test_ghyben_herzberg.py  test_mass_balance.py  test_upconing.py
research/halocline-surrogate/: RUN_H100.md  pyproject.toml
research/halocline-surrogate/configs/: gnn.yaml  sampling_4090.yaml  ufno_cpu_300.yaml  ufno_cpu_smoke.yaml  ufno_h100_fast.yaml  ufno_small.yaml  ufno_tiny.yaml  wno.yaml
research/halocline-surrogate/results/: process_update_2026_04_28.md  report_4090.csv  rtx4090_4000_500_500.md
research/halocline-surrogate/src/halocline_surrogate/models/: __init__.py  ufno.py  wno.py
research/halocline-surrogate/src/halocline_surrogate/train/: cli.py  loop.py  losses.py
research/halocline-surrogate/tests/: test_metrics.py
(+81 files in other folders)
